Fix invalid syntax for python 2.6

--- a/example/example/templates/index.html
+++ b/example/example/templates/index.html
@@ -46,7 +46,7 @@
     {% csrf_token %}
     <input type="submit"></input>
   </form>
-
+  <a href="http://google.com">external link</a>
 </body>
 </html>
 
