--- a/example/example/templates/test.html
+++ b/example/example/templates/test.html
@@ -5,5 +5,5 @@ Test!
 <div id="container" style="border:1px black solid;">
   {% include 'include/test.html' %}
 </div>
-<a href="{% url test message=message %}">Test</a>
+<a class="ajax" href="{% url test message=message %}">Test</a>
 {% endblock %}
